Increase theme version to fix M57->M58 upgrade not migrating themes.

This is what happened:
1. http://crrev.com/2667753004 (Tom's patch) lands, which modifies
ThemeProperties::OverwritableByUserThemeProperty and bumps the theme
version to 46.
2. http://crrev.com/2663363002 (my patch) lands, which does some
unrelated stuff and also bumps the theme version to 47.
3. My patch is merged back to M57. When people install M57 their theme
version goes from 45 to 47, and so their themes are regenerated.
4. M58 comes out, which includes Tom's patch, but the version is still
47 so no one's patches are regenerated. So I essentially "skipped" Tom's
theme version bump.

This patch bumps the version again, in order to regenerate everyone's
themes and get them in sync with Tom's patch.

BUG=652948

Review-Url: https://codereview.chromium.org/2880003003
Cr-Commit-Position: refs/heads/master@{#471606}

Former-commit-id: 488babf8ae0aad660733d118f28c37169e1ca784